# nanoindex

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: agent.py  index.py  search.py
app/core/: __init__.py  config.py
app/internal/: __init__.py  clustering.py  distance.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  adaptive.py  datastore.py  indexer.py  searcher.py
docs/: adaptive-agent.md  benchmarks.md  failure_modes.md  plan.md
scripts/: benchmark.py  test_api.py  tui.py
tests/: __init__.py  test_adaptive.py  test_adaptive_convergence.py  test_api.py  test_distance.py
